--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="card-white" id="introduction">
  	    <h1> Hi there, I'm Emma 👋</h1>
 
- 	    <img src="images/profile.jpg" height="210" width="210" alt="Emma Moreau" class="img-circle">
+ 	    <img src="images/profile.JPG" height="210" width="210" alt="Emma Moreau" class="img-circle">
 
  	    <p> 
  		  My name is <strong>Emma Moreau</strong> and I am an <strong>ESSEC Business School</strong> student. 🎓 <br>
